Version 0.4-0
  
   *  Added async argument to .gpu()/.cuda()

   *  High-level mechanism for mallocPitch() and copying an R object to the memory.

   *  Regenerated the code with improvements to the code generation mechanism.
